--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 td {
-  width: 50px;
-  height: 50px;
-  border: solid 1px black;
+  width: 100px;
+  height: 100px;
+  border: outset 4px;
+  border-top-color: #3a2901;
+  border-bottom-color: #3a2901;
+  border-left-color: #3a2901;
   text-align: center;
-  font-size: 20pt;
+  font-size: 50px;
+  color: black;
+  background-color: #563d03;
 }
 
 td:hover {
-  background-color: #dbdbdb;
+  background-color: #61cad8;
   cursor: pointer;
 }
