--- a/style.css
+++ b/style.css
@@ -15,3 +15,8 @@ td:hover {
   background-color: #61cad8;
   cursor: pointer;
 }
+
+h1 {
+  text-align: center;
+  font-family: "Concert One", cursive;
+}
