--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@ td:hover {
   color: black;
 }
 
-
 h1 {
+  margin-top: 100px;
+  font-size: 50px;
   text-align: center;
   font-family: "Concert One", cursive;
 }
@@ -24,37 +25,33 @@ h1 {
   text-align: center;
   font-size: 20px;
   font-family: "Concert One", cursive;
+  padding-right: 100px;
 }
 
 .scores {
   font-size: 20px;
+  color: red;
 }
 
 .player2 {
   text-align: center;
   font-size: 20px;
   font-family: "Concert One", cursive;
+  padding-left: 100px;
 }
-
-/*.gameboard {
-  text-align: center;
-  margin: 100 auto;
-  width: 100%;
-  padding-top: 150px;
-  padding-left: 500px;
-  font-family: "Concert One", cursive;
-}*/
 
 .game {
   display: inline-block;
   font-family: "Concert One", cursive;
+  padding-left: 680px;
 }
 
 hr {
   border-color: red;
-  width: 150px;
+  width: 100px;
   height: 3px solid;
 }
 
 .divider {
   transform: rotate(-45deg);
+}
